# gravity

./: .travis.yml  CMakeLists.txt  CODING_STANDARDS.md  CONTRIBUTING.md  README.md  appveyor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
cmake/: ClangTools.cmake  CompilerOptions.cmake  Cppcheck.cmake  Options.cmake  PrintInfo.cmake
config/: config.h.in
docs/: Doxyfile.in  header.html
gravity/: CMakeLists.txt
gravity/include/gravity/: gravity.h
gravity/include/gravity/base/: GrDefs.h
tests/: main.cpp
